# dagoba-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/dagoba/: graph.hpp  query.hpp  types.hpp
src/: graph.cpp  main.cpp  query.cpp
tests/: CMakeLists.txt  test_dagoba.cpp
